# email-env

./: .gitignore  Dockerfile  README.md  app.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
server/: __init__.py  app.py  email_env_environment.py
tasks/: __init__.py
tasks/classify/: __init__.py  grader.py
tasks/priority/: __init__.py  grader.py
tasks/reply/: __init__.py  grader.py
