[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-env"
version = "0.1.0"
description = "Email Environment AI using OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests"
]

[tool.openenv]
environment = "server.email_env_environment:EmailEnv"